2010-10-29  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	define offsetof for Windows CE

2010-10-22  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Makefile.am:
	* src/lib/dirent.h:
	* src/lib/evil_dirent.c:
	use our own dirent structure and implementation instead of
	mingw one.

2010-09-14  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Makefile.am:
	* src/lib/Evil.h:
	* src/lib/evil_time.c:
	* src/lib/evil_time.h:
	add locatime_r() for calendar in Elementary.

2010-05-29  Vincent Torri  <doursse at users dot sf dot net>

	* doc/Doxyfile:
	define _MSC_VER so that code guarded by it can
	be processed by doxygen

	* src/lib/evil_stdio.c:
	* src/lib/evil_stdio.h:
	vasprintf() is also not in mingw crt

	* src/lib/evil_unistd.c:
	* src/lib/evil_unistd.h:
	getpid is declared and defined in mingw crt

2010-04-14  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_stdio.c:
	* src/lib/evil_stdio.h:
	add vasprintf() function

2010-04-03  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	mkdir() does not accept 2 arguments.
	Define hypot to remove huge amount of warnings in
	Evas withvc++

2010-04-01  Vincent Torri  <doursse at users dot sf dot net>

	* configure.ac:
	move version management at the beginning

	* src/bin/evil_suite.c:
	* src/bin/evil_test_dlfcn.c:
	* src/bin/evil_test_environment.c:
	* src/bin/evil_test_gettimeofday.c:
	* src/bin/evil_test_link.c:
	* src/bin/evil_test_mkstemp.c:
	* src/bin/evil_test_pipe.c:
	* src/bin/evil_test_realpath.c:
	* src/lib/Evil.h:
	* src/lib/Makefile.am:
	* src/lib/evil_errno.c:
	* src/lib/evil_main.c:
	* src/lib/evil_main.h:
	* src/lib/evil_unistd.c:
	* src/lib/evil_unistd.h:
	* src/lib/evil_util.c:
	fix warnings

2010-03-26  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_string.c:
	* src/lib/evil_string.h:
	add strcasecmp wrapper for vc++

2010-03-12  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Makefile.am: